style.css
/* Basic Style */
.page {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}

.header {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}

.header img {
  width: 100%;
}

.header .info {
  font-family: fantasy, cursive;
}

@media (max-width: 768px) {
  .header { text-align: center;
}
}

.element-center {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}

.task {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
}

.task-row-wrapper {
  display: flex;
}

ul {
  margin: 0;
  padding: 0px;
}

li, h3 {
  list-style: none;
}

input,button{
  outline: none;
}

.delete {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}

.delete:hover {
  color: #3a3A3a;
}

/* Heading */
.title,
[for="new-task"] {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}

[type="text"] {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #dDd;
  background: #FFF;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}

[type="text"]:focus {
  color: #333;
}

/* New Task */
[for="new-task"] {
  display: block;
  margin: 0 0 20px;
}

#new-task {
  width: 318px;
}

/* Task list */
.list-item {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

* {
  vertical-align: middle;
}

.list-item > [type="checkbox"] {
  margin: 0 10px;
}

.list-item > .task {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}

.list-item >    [type="text"] {
  width: 226px;
}

.delete .image {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}

.delete .image:hover {
  transform: rotateZ(0);
}

/* Completed */
#completed-tasks .task {
  text-decoration: line-through;
  color: #888;
}

/* Edit Task */
.list-item [type=text] {
  display: none;
}

.edit-mode [type=text] {
  display: inline-block;
  width: 224px;
}

.edit-mode .label {
  display: none;
}

